--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,63 @@
   align-self: flex-start;
 }
 
+.intro {
+  display: flex;
+  flex-direction: column;
+  width: calc(100% - 148px * 2);
+  max-width: 690px;
+  padding: 92px 148px 0 148px;
+  margin: 0;
+}
+
+.intro__title {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 900;
+  font-size: 54px;
+  font-style: normal;
+  line-height: 58px;
+  color: white;
+  margin: 0 0 40px 0;
+}
+
+.intro__text {
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 163%;
+  color: white;
+  margin: 0;
+}
+
+.intro__list {
+  list-style-type: none;
+  padding: 0;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 18px;
+  color: white;
+  margin-top: 33px;
+}
+
+.intro__span {
+  font-weight: 400;
+}
+
+.photo-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(auto-fit, 1fr);
+  gap: 16px;
+  margin: 92px 48px 0 48px;
+}
+
+.photo-grid__image {
+  width: 100%;
+  object-fit: cover;
+}
+
 @media screen and (min-width: 1281px) {
   .page {
     margin: 0 auto;
@@ -138,6 +195,19 @@
 @media screen and (max-width: 1023px) {
   .lead__caption {
     margin: 8px 24px 0 24px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .intro {
+    width: calc(100% - 48px * 2);
+    padding: 92px 48px 0 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .photo-grid {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -187,6 +257,29 @@
   }
 }
 
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, min-content);
+    margin: 88px 24px 0 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
+    width: calc(100% - 24px * 2);
+    padding: 88px 24px 0 24px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
 @media screen and (max-width: 321px) {
   .lead__title {
     max-width: 288px;
@@ -201,5 +294,22 @@
     font-size: 16px;
     line-height: 20px;
     margin: 16px auto 0 auto;
+  }
+}
+
+@media screen and (max-width: 321px) {
+  .intro {
+    width: calc(100% - 16px * 2);
+    padding: 64px 16px 0 16px;
+    max-width: 288px;
+  }
+}
+
+@media screen and (max-width: 321px) {
+  .photo-grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, min-content);
+    margin: 64px 16px 0 16px;
+    gap: 12px;
   }
 }
